fixed modal on mobile

--- a/css/main-stylesheet.css
+++ b/css/main-stylesheet.css
@@ -620,7 +620,7 @@ footer a:hover {
         margin-left: 0;
     }
 
-    .speaking-summary .pic {
+    /* .speaking-summary .pic {
         background-image: url('../images/Khalilah-Lyons.jpeg');
         background-size: contain;
         width: 100vw;
@@ -629,11 +629,14 @@ footer a:hover {
         background-attachment: scroll;
         background-position-x: center;
         background-repeat: no-repeat;
+    } */
+    /* .speaking-summary .btn {
+        height: auto;
     }
     .speaking-summary .speaking-pic {
-        /* width: 100%; */
-        display: none;
-    }
+        width: 60%;
+        margin-left: 5vw;
+    } */
 
     /*********/
     /* Logos */
@@ -672,6 +675,7 @@ footer a:hover {
         background-attachment: fixed;
         background-position-x: center;
         background-repeat: no-repeat;
+        background-position-y: 62px;
     }
     .photo-container .bio_pic {
         /* width: 100%; */
@@ -694,8 +698,8 @@ footer a:hover {
     }
 }
 
-@media screen 
-    and (max-width: 700px)
+/* @media screen 
+    and (max-width: 600px)
     and (orientation: landscape) {
      
     .speaking-summary .pic {
@@ -705,16 +709,15 @@ footer a:hover {
         background-attachment: scroll;
     }   
     .photo-container .pic {
-        /* background-size: cover; */
         width: 100vw;
         height: calc(100vw * 4 / 3);
         min-height: 500px;
         background-attachment: scroll;
     }
-}
+} */
 
 @media screen 
-    and (max-width: 700px)
+    and (max-width: 600px)
     and (orientation: portrait)
     and (min-height: 400px) {
         
