--- a/js/modal/modal.css
+++ b/js/modal/modal.css
@@ -1,27 +1,26 @@
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    position: fixed;
+    z-index: 1000;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    transition: all 1.3s ease-in-out forwards;
-
+    width: 100%; 
+    height: 100%;
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    transition: all 0.3s;
 }
     
 /* Modal Content/Box */
 
 .modal-content {
     background-color: #fefefe;
-    margin: 5vh auto; /* 15% from the top and centered */
+    margin: 5vh auto; 
     padding: 5px;
     border: 1px solid #888;
-    width: 60%; /* Could be more or less, depending on screen size */
+    width: 60%;
     min-height: 50vh;
     display: flex;
     flex-direction: column;
@@ -68,4 +67,39 @@
 .hide {
     display: none;
     /* left: -100vw; */
+}
+
+@media screen and (max-width: 930px) {
+    .modal.show {
+        display: block;
+        left: 0vw;
+    }
+    .hide {
+        display: block;
+    } 
+    .modal {
+        display: block;
+        left: -100vw;
+    }
+
+    .modal-body {
+        height: 100% !important;
+    }
+
+    .modal-content, #speaking .modal-content {
+        width: 100%;
+        height: 100% !important;
+        margin: 0;
+        border: none;
+        border-radius: 0;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #speaking .modal-content .screenshot {
+        display: none;
+    }
+    #speaking .modal-content .row {
+        grid-template-columns: 100%;
+    }
 }
